--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^19.2.2",
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.7.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "vite": "^5.4.21"
   }
